[tool.poetry]
name = "calculatrice-rpn"
version = "0.1.0"
description = ""
authors = ["Ines Ben Ameur <ines.benameur@gnomondigital.com>"]
readme = "README.md"
packages = [{include = "calculatrice_rpn", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = 'calculatrice_rpn.main:run'